--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,3 +62,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+FrameRateLock=PUFRL_30
+
